force-app/main/default/objects/public_Jobs__x/public_Jobs__x.object-meta.xml
<CustomObject>
    <description>public$Jobs</description>
    <externalDataSource>RH</externalDataSource>
    <externalName>public$Jobs</externalName>
    <label>Poste (référentiel)</label>
    <pluralLabel>Postes (référentiel)</pluralLabel>
</CustomObject>