force-app/main/default/objects/public_Jobs__x/fields/Cycle_de_paiement__c.field-meta.xml
<CustomField>
    <fullName>Cycle_de_paiement__c</fullName>
    <description>Cycle de paiement</description>
    <externalDeveloperName>Cycle de paiement</externalDeveloperName>
    <label>Cycle de paiement</label>
    <length>32</length>
    <type>Text</type>
</CustomField>