force-app/main/default/objects/public_Jobs__x/fields/Departement__c.field-meta.xml
<CustomField>
    <fullName>Departement__c</fullName>
    <description>Departement</description>
    <externalDeveloperName>Departement</externalDeveloperName>
    <label>Departement</label>
    <length>32</length>
    <type>Text</type>
</CustomField>