force-app/main/default/objects/public_Jobs__x/fields/Devise__c.field-meta.xml
<CustomField>
    <fullName>Devise__c</fullName>
    <description>Devise</description>
    <externalDeveloperName>Devise</externalDeveloperName>
    <label>Devise</label>
    <length>12</length>
    <type>Text</type>
</CustomField>