force-app/main/default/objects/public_Jobs__x/fields/Famille__c.field-meta.xml
<CustomField>
    <fullName>Famille__c</fullName>
    <description>Famille</description>
    <externalDeveloperName>Famille</externalDeveloperName>
    <label>Famille</label>
    <length>128</length>
    <type>Text</type>
</CustomField>