force-app/main/default/objects/public_Jobs__x/fields/Grade__c.field-meta.xml
<CustomField>
    <fullName>Grade__c</fullName>
    <description>Grade</description>
    <externalDeveloperName>Grade</externalDeveloperName>
    <label>Grade</label>
    <length>32</length>
    <type>Text</type>
</CustomField>