force-app/main/default/objects/public_Jobs__x/fields/Salaire_Max__c.field-meta.xml
<CustomField>
    <fullName>Salaire_Max__c</fullName>
    <description>Salaire Max</description>
    <externalDeveloperName>Salaire Max</externalDeveloperName>
    <label>Salaire Max</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>