force-app/main/default/objects/public_Jobs__x/fields/Salaire_Median__c.field-meta.xml
<CustomField>
    <fullName>Salaire_Median__c</fullName>
    <description>Salaire Median</description>
    <externalDeveloperName>Salaire Median</externalDeveloperName>
    <label>Salaire Median</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>