force-app/main/default/objects/public_Jobs__x/fields/Salaire_Min__c.field-meta.xml
<CustomField>
    <fullName>Salaire_Min__c</fullName>
    <description>Salaire Min</description>
    <externalDeveloperName>Salaire Min</externalDeveloperName>
    <label>Salaire Min</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>