force-app/main/default/objects/public_Jobs__x/fields/Statut__c.field-meta.xml
<CustomField>
    <fullName>Statut__c</fullName>
    <description>Statut</description>
    <externalDeveloperName>Statut</externalDeveloperName>
    <label>Statut</label>
    <length>32</length>
    <type>Text</type>
</CustomField>