force-app/main/default/objects/public_Jobs__x/fields/Titre__c.field-meta.xml
<CustomField>
    <fullName>Titre__c</fullName>
    <description>Titre</description>
    <externalDeveloperName>Titre</externalDeveloperName>
    <label>Titre</label>
    <length>128</length>
    <type>Text</type>
</CustomField>