force-app/main/default/objects/public_Jobs__x/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>ExternalId</columns>
    <columns>Code__c</columns>
    <columns>Titre__c</columns>
    <columns>Type__c</columns>
    <columns>Departement__c</columns>
    <columns>Statut__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
</ListView>